correction erreurs consoles

--- a/angular.json
+++ b/angular.json
@@ -88,7 +88,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss", "node_modules/ngx-toastr/toastr.css"],
             "scripts": []
           }
         }
